Bug 459758 - "Show application setting as" setting is terribly broken (maybe remove it?)
Summary: "Show application setting as" setting is terribly broken (maybe remove it?)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Dashboard widget (other bugs)
Version First Reported In: 6.2.4
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-27 18:26 UTC by tomashnyk
Modified: 2025-10-21 22:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
Some nonsensicla description (1.55 MB, image/png)
2022-09-27 18:52 UTC, tomashnyk
Details
elided description (1.48 MB, image/png)
2022-09-27 18:56 UTC, tomashnyk
Details
Search removes description (1.44 MB, image/png)
2022-09-27 19:09 UTC, tomashnyk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tomashnyk 2022-09-27 18:26:24 UTC
The setting has four options:
Name only
Description only
Name (Description)
Description (Name)

All but the default are terribly broken in my opinion:

1) Description only often shows nonsensical strings, also long strings that get elided even with https://bugs.kde.org/show_bug.cgi?id=362986 fixed

2) Name (Description) and Description (Name) only work before one types anything, then "Name only" starts applying. Even in default setting, they are just ugly, because they are long and elided (without ellipsis, so it is not apparent they are elided)

Proposed solution: get rid of this option and always show a tooltip when hovering over the icons showing "Name (Description)"

It would be simpler, would reduce code complexity probably, get rid of bugs and not meaningful functionality would be lost. I doubt anybody is using those settings.
Comment 1 tomashnyk 2022-09-27 18:52:44 UTC
Created attachment 152477 [details]
Some nonsensicla description

The decsription are elided and sometimes do not make sense ("measure object on" or "a free graphical user"). Favourites do not respect this settings either.
Comment 2 tomashnyk 2022-09-27 18:56:07 UTC
Created attachment 152478 [details]
elided description

This shows the description in a parenthesis, but is elided.
Comment 3 tomashnyk 2022-09-27 19:09:14 UTC
Created attachment 152479 [details]
Search removes description

No  I started to search and the description was removed.
Comment 4 Nate Graham 2022-09-28 17:15:58 UTC
I would tend to agree. We don't have these settings for Kickoff, having removed them years ago. People haven't complained.

If this is something you'd like to work on, please do feel free!
Comment 5 Tom 2024-11-01 00:23:26 UTC
If I understood correctly, we should leave two options for configuration:
 Name Only 
Description Only

ToolTip should be Description when Name Only configured.
ToolTip should be Name Only when Description Only configured.

Configuration should be respected also when displaying search results.

@tomashnyk@gmail.com @Nate Graham I want to work on this so please let me know if this is desired result.
Comment 6 tomashnyk 2024-11-01 00:38:01 UTC
My preffered solution as I suggested. above would be to remove this option entirely. Show name only be default and when you hower over the icon, sho desxription as a tool tip (possibly something like Name — Description or Name (Description).

Only showing description does not seem to make much sense, where would it make sense? Feel free to work on it, I just reported it.
Comment 7 Bug Janitor Service 2024-11-06 22:02:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4898
Comment 8 Niccolò Venerandi 2025-10-21 08:20:33 UTC
Git commit c5b449d8c2730b85fe6abc6050217d74ba390036 by Niccolò Venerandi, on behalf of Tomislav Pap.
Committed on 21/10/2025 at 08:08.
Pushed by niccolove into branch 'plasma-workspace-ApplicationDashboardShowAppsAsConfigRestyling'.

ApplicationDashboard 'Show Apps As' Config Restyling

Important: This MR is connected to

Previously, there was configuration option which enabled user to chose the way ApplicationDashboard displays application's name. Other option than AppName Only
looked clutered and was harder to read Application text.

This configuration section was removed and now application dashboard shows App Names together with
description of the application as toolTip. Before if you have chosen AppName Only, description toolTip was not visible.

For some apps, such as Konqueror, Info Center description was faulty extracted(null/empty string) in Recent Apps section which is also fixed with this MR. The reason for
that issue was that description for Recent Apps(recentusagemodel.cpp) was extracted as comment, and didn't have backup option to genericName as in appEntry.cpp -> init() function.

M  +1    -0    applets/kicker/appentry.cpp
M  +7    -1    applets/kicker/recentusagemodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c5b449d8c2730b85fe6abc6050217d74ba390036
Comment 9 Niccolò Venerandi 2025-10-21 08:22:18 UTC
Git commit 89ac8c45b21d88a3a5f5061491730ae004a3fd6e by Niccolò Venerandi, on behalf of Tomislav Pap.
Committed on 21/10/2025 at 08:22.
Pushed by niccolove into branch 'master'.

ApplicationDashboard 'Show Apps As' Config Restyling

# ApplicationDashboard 'Show Apps As' Config Restyling

### Reason for the change

**Important**: This MR is connected to [https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2623](https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2623)

Previously, there was configuration option which enabled user to chose the way ApplicationDashboard displays application's name. Other option than AppName Only
looked clutered and was harder to read Application text.

- This configuration section was removed and now application dashboard shows App Names together with
description of the application as toolTip. Before if you have chosen AppName Only, description toolTip was not visible.

- For some apps, such as Konqueror, Info Center description was faulty extracted(null/empty string) in Recent Apps section which is also fixed with this MR. The reason for
that issue was that description for Recent Apps(recentusagemodel.cpp) was extracted as comment, and didn't have backup option to genericName as in appEntry.cpp -> init() function.

M  +1    -0    applets/kicker/appentry.cpp
M  +7    -1    applets/kicker/recentusagemodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/89ac8c45b21d88a3a5f5061491730ae004a3fd6e